--- a/public/style.css
+++ b/public/style.css
@@ -20,10 +20,10 @@ h1.clubsHeader {
     margin-bottom: 15px;
 }
 div.clubItem h4 {
-    font-size: 16pt;
+    font-size: 14pt;
     margin: 0;
     padding: 0;
-    color: rgba(73, 50, 107, 0.7);
+    color: #707070;
 }
 div.clubItem p {
     margin: 1% 0.5% 1.5% 0.5%;
@@ -37,28 +37,34 @@ div.clubItem {
     padding: 0.5%;
     margin: 0.5%;
     border-radius: 25px;
-    border: 1px solid rgba(73, 50, 107, 0.5);
+    border: 1px solid #dddddd;
 }
 
 h2.clubName {
-    font-family: 'Archivo Black', sans-serif;
+    font-family: 'futura-pt', sans-serif;
     padding-top: 10px;
     margin-bottom: 10px;
-    font-size: 20pt;
+    font-size: 18pt;
     text-align: center;
     color: rgba(73, 50, 107, 0.85);
+}
+p {
+    color: #989898;
 }
 p.clubDescription {
     font-size: 14pt;
 }
 p.meetingPlace {
-    font-size: 16pt;
-    padding: 0 5% 0 5%;
+    padding: 0 0 0 2.5%;
+}
+b.meetingTitle {
+    font-size: 13pt;
+    color: #707070;
 }
 p.contactPerson {
     width: 90%;
     display: inline-block;
-    padding: 0 5% 0 5%;
+    padding: 0 0 0 2.5%;
     font-size: 16pt;
 }
 span.imageSpan {
@@ -95,30 +101,42 @@ div.tagList {
 }
 .tagGuide {
     font-size: 150%;
-    margin: 0.5% 1% 0.5% 1%;
+    margin: 0.5% 0.25% 0.5% 1%;
 }
+a {
+    text-decoration: none;
+}
+a.email {
+    color: rgb(49, 132, 147);
+}
+
+span.clubMetaData {
+    /* border: 2px solid red; */
+}
+
 @media (max-width: 1400px) {
     div.clubItem {
         width: 30%;
         padding: 0.5%;
         margin: 0.5%;
-        border-radius: 30px;
+        border-radius: 25px;
     }
 }
 @media (max-width: 1100px) {
     div.clubItem {
-        width: 47%;
-        padding: 0.5%;
+        width: 46%;
+        padding: 1%;
         margin: 0.5%;
-        border-radius: 30px;
+        border-radius: 10px;
     }
 }
 @media (max-width: 600px) {
     div.clubItem {
         width: 95%;
-        padding: 0.5%;
+        padding: 2.5%;
         margin: 2% 2.5% 2% 2.5%;
-        border-radius: 30px;
+        border-radius: 0px;
+        border-width: 0 0 1px 0;
     }
 }
 
