--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,7 @@ p.clubDescription {
 }
 p.meetingPlace {
     padding: 0 0 0 2.5%;
+    font-size: 12pt;
 }
 b.meetingTitle {
     font-size: 13pt;
